bugfix: kepler/zooniverse ids visible before they should be; finish tutorial interactivity; clean up code

--- a/css/zootorial.styl
+++ b/css/zootorial.styl
@@ -40,7 +40,7 @@
   .zootorial-instruction
     background rgba(39,54,64,1)
     border-radius 3px
-    font-weight bold
+    // font-weight bold
     padding 15px 25px 15px 20px
   .zootorial-instruction[data-zootorial-attention]
     animation 0.25s zootorial-throb ease-in-out infinite alternate
